// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Radio -  renders checked 1`] = `
<div
  className="radio"
>
  

  <input
    checked={true}
    type="radio"
  />
  

</div>
`;

exports[`Component: Radio -  renders disabled 1`] = `
<div
  className="radio"
>
  

  <input
    disabled={true}
    type="radio"
  />
  

</div>
`;

exports[`Component: Radio -  renders with id and label 1`] = `
<div
  className="radio"
>
  

  <input
    id="test"
    type="radio"
  />
  

  <label
    htmlFor="test"
  >
    test
  </label>
  

</div>
`;

exports[`Component: Radio -  renders with name 1`] = `
<div
  className="radio"
>
  

  <input
    name="test"
    type="radio"
  />
  

</div>
`;

exports[`Component: Radio -  renders without label 1`] = `
<div
  className="radio"
>
  

  <input
    type="radio"
  />
  

</div>
`;
